# model

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
examples/: DataHandler.ipynb  Experimenter.ipynb  Simulação Valor Aço.ipynb  api.ipynb  cli.ipynb  logger.ipynb
examples/specifications/: rnn_example.yaml
examples/tmp/: dataset_exemplo.csv
experiments/data_science/: 00_01_Synthetic_Data_Generator.ipynb  00_02_Windows_with_Forecast.ipynb  00_03_Plot.ipynb  01_01_01_Previous_One.ipynb  01_01_02_Moving_Average.ipynb  01_02_Autoarima.ipynb  01_03_AutoTS.ipynb  01_04_01_Keras_Example.ipynb  01_04_02_Keras_Example.ipynb  02_01_Experiments_with_Naive_Models.ipynb  02_02_Experiments_with_Basic_Example_RNN_Model.ipynb
experiments/data_science/tmp/: .gitignore
kube/deployment/: api-model-compra-comigo.yaml  cli-model-compra-comigo.yaml  model-compracomigo.yaml
kube/namespace/: model-compra-comigo-namespace.yaml
kube/service/: model-compra-comigo-service.yaml
kube/serviceaccount/: model-compra-comigo-namespace-serviceaccount.yaml
model_compra_comigo/data_handler/: __init__.py  data_handler.py  data_simulator.py  utils.py  visualizer.py
model_compra_comigo/experimenter/: __init__.py  experimenter.py
model_compra_comigo/experimenter/utils/: __init__.py  dataset.py  plot.py
model_compra_comigo/interface/cli/: callback.py  cli.py
model_compra_comigo/interface/commands/: __init__.py  commands.py
model_compra_comigo/logger/: __init__.py  logger.py
model_compra_comigo/model/: __init__.py
model_compra_comigo/model/autoarima/: autoarima_model.py
model_compra_comigo/model/naive/: __init__.py
model_compra_comigo/model/rnn/: __init__.py  rnn_autokeras_experiment.py  rnn_example_experiment.py  rnn_example_model.py
tmp/: .gitignore
(+4 files in other folders)
